# the-code-sage

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  squarecloud.config  test_async_mongo.py
assets/images/ranks/: attribution.txt
docs/: CONTRIBUTING.md
scripts/: rewards_seeds.py  seed_items.py  start.py
src/app/: config.py  logging.py  logging_.py  main.py
src/bot/: client.py
src/cogs/: admin_cog.py  events_cog.py  inventory_cog.py  mission_cog.py  shop_cog.py  user_cog.py
src/database/: connection.py  models.py
src/database/models/: effects.py  item.py  level_rewards.py  mission.py  missions.py  user.py
src/repositories/: item_repository.py  level_rewards_repository.py  missions_repository.py  user_repository.py
src/services/: economy_service.py  leveling_service.py  mission_service.py  sage_service.py  user_service.py
src/utils/: embeds.py  helpers.py
src/utils/repositories/: item_repository.py  level_rewards_repository.py  missions_repository.py  user_repository.py
src/views/: __init__.py  shop_view.py  youtube_view.py
tests/: class.py  test1.py  test_utils.py
tests/cogs/: test_admin_cog.py  test_user_cog.py
tests/repositories/: test_item_repository.py  test_level_rewards_repository.py  test_mission_repository.py  test_user_repository.py
tests/services/: test_economy_service.py  test_leveling_service.py  test_mission_service.py  test_user_service.py
tests/user/: test_user_repository.py
